# attention-in-encoders

./: .gitignore  README.md  attention_app.py  package.json  pyproject.toml
app/backend/: main.py
app/frontend/src/app/: globals.css  layout.tsx  page.tsx
paper/: main.tex  references.bib
tests/backend/: conftest.py  test_main.py
