[project]
name = "attention-encoders"
version = "0.1.0"
description = "Attention in Encoders Viewer App"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
attention = "attention_app:main"

[tool.hatch.build.targets.wheel]
packages = ["app"]
force-include = { "attention_app.py" = "attention_app.py" }

[tool.hatch.build.targets.sdist]
exclude = [
  "**/node_modules",
  "**/.next",
  "**/venv",
]
